2005-12-15  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing typos

2005-12-12  Prakash Punnoor <prakash@punnoor.de>

	* README: CMake cache clearing

2005-12-11  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: don't check for time.h anymore;
	correctly check for Linux for ALSA

2005-12-10  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: set some vars for openal-config.in;
	enable ALSA option only for Linux, DSOUND only for Win32
	
	* README: some typos

2005-12-10  Sven Panne  <sven.panne@aedion.de>

	* src/al_buffer.c: Fixed buffer attribute getters (thanks to Shawn
	Kirst for  pointing this out).  Renamed MAX_LISTENER_NUM_VALUES to
	the more sensible MAX_BUFFER_NUM_VALUES.

2005-12-08  Sven Panne  <sven.panne@aedion.de>

	* admin/pkgconfig/openal-config.in: Overhauled quite a bit. The order of
	commandline options does not matter anymore. Added more standard GNU
	prefixes. Added --static option (currently a no-op).

2005-12-04  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/Makefile.am: Do ALSA detection and conditional
	inclusion the autotools way, minimizing tests and giving nice feedback
	to the user.

2005-12-03  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: C99 stuff, better alsa detection, threading
	clean-up; forgot to define HAVE_MMX_MEMCPY; fix library linking;
	only link openal and alut to testcase

2005-12-02  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec: ALSA support is now autodetected.

	* src/Makefile.am: Fixed include path.

2005-12-01  Sven Panne  <sven.panne@aedion.de>

	* configure.ac, src/arch/alsa/alsa.c: Cleaned up ALSA detection.

	* configure.ac: Moved debugging-related options together. Renamed
	--enable-stub-notify to --enable-debug-stub, the former seems to be a
	cut-n-paste error. Added explanations for debugging-related #defines.

	* CMakeLists.txt, config-osx.h, configure.ac, src/al_main.c,
	src/al_mutexlib.c, src/al_mutexlib.h, src/al_threadlib.c,