@@ -1,5 +1,0 @@
-includedir      = $(prefix)/include/AL
-include_HEADERS =				\
-	$(top_srcdir)/../include/AL/al.h	\
-	$(top_srcdir)/../include/AL/alc.h	\
-	alext.h
