@@ -1,3 +1,7 @@
+2005-12-15  Sven Panne  <sven.panne@aedion.de>
+
+	* include/AL/Makefile.am: Removed.
+
 2005-12-15  Prakash Punnoor <prakash@punnoor.de>
 
 	* README: CMake cache clearing typos
